--- a/views/seafreight.ejs
+++ b/views/seafreight.ejs
@@ -172,7 +172,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     </button>
                     <div class="dropdown-menu" role="menu" style="">
                       <a href="Editairfreight.html" class="dropdown-item">Edit</a>
-                      <a href="#" class="dropdown-item">Delete</a>
+                      <a href="/seafreightdel/<%= data[i].id %>" class="dropdown-item">Delete</a>
                     </div>
                   </div>
                 </td>
