--- a/views/airfreight.ejs
+++ b/views/airfreight.ejs
@@ -162,7 +162,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   </button>
                   <div class="dropdown-menu" role="menu" style="">
                     <a href="Editairfreight.html" class="dropdown-item">Edit</a>
-                    <a href="#" class="dropdown-item">Delete</a>
+                    <a href="/airfreightdel/<%= data[i].id %>" class="dropdown-item">Delete</a>
                   </div>
                 </div>
               </td>
