--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,13 +23,13 @@
       <p style="font-size:x-large;"><b>Sign In</b></a></p>
     </div>
     <div class="card-body login-card-body">
-      <form>
+      <form action="/users/validate" method="POST">
         <div class="card-body">
           <div class="form-group">
-            <input type="input" class="form-control" id="username" placeholder="Username">
+            <input type="input" name="username" class="form-control" id="username" placeholder="Username">
           </div>
           <div class="form-group">
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
           </div>
         </div>
         <!-- /.card-body -->
