--- a/views/indexweb.ejs
+++ b/views/indexweb.ejs
@@ -51,14 +51,13 @@
                             <li class="menu-item menu-item-home current-menu-item logisco-normal-menu"><a href=index.html>HOME</a></li>
                             <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=# class=sf-with-ul-pre>PRODUCT & SERVICES</a>
                                 <ul class=sub-menu>
-                                    <li class="menu-item" data-size=60><a href=#>MPL FREIGHT</a></li>
-                                    <li class="menu-item" data-size=60><a href=#>SHIPMENT RATES</a></li>
-                                    <li class="menu-item" data-size=60><a href=#>PROJECT LOGISTIC</a></li>
+                                    <li class="menu-item" data-size=60><a href=/freight>MPL FREIGHT</a></li>
+                                    <li class="menu-item" data-size=60><a href=/logistic>PROJECT LOGISTIC</a></li>
                                 </ul>
                             </li>
-                            <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=ourclient.html class=sf-with-ul-pre>OUR CLIENTS</a>
+                            <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=/ourclient class=sf-with-ul-pre>OUR CLIENTS</a>
                             </li>
-                            <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=contact.html class=sf-with-ul-pre>CONTACT US</a>
+                            <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=/contact class=sf-with-ul-pre>CONTACT US</a>
                             </li>
                                 </ul>
                             </li>
@@ -87,14 +86,14 @@
                                     <li class="menu-item menu-item-home current-menu-item logisco-normal-menu"><a href=index.html>HOME</a></li>
                                     <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=# class=sf-with-ul-pre>PRODUCT & SERVICES</a>
                                         <ul class=sub-menu>
-                                            <li class="menu-item" data-size=60><a href=#>MPL FREIGHT</a></li>
-                                            <li class="menu-item" data-size=60><a href=#>SHIPMENT RATES</a></li>
-                                            <li class="menu-item" data-size=60><a href=#>PROJECT LOGISTIC</a></li>
+                                            <li class="menu-item" data-size=60><a href=/freight>MPL FREIGHT</a></li>
+                                           
+                                            <li class="menu-item" data-size=60><a href=/logistic>PROJECT LOGISTIC</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=ourclient.html class=sf-with-ul-pre>OUR CLIENTS</a>
+                                    <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=/ourclient class=sf-with-ul-pre>OUR CLIENTS</a>
                                     </li>
-                                    <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=contact.html class=sf-with-ul-pre>CONTACT US</a>
+                                    <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=/contact class=sf-with-ul-pre>CONTACT US</a>
                                     </li>
 
                                 </ul>
@@ -481,7 +480,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gdlr-core-pbf-wrapper " style="padding: 80px 0px 30px 0px;">
+                <!-- <div class="gdlr-core-pbf-wrapper " style="padding: 80px 0px 30px 0px;">
                     <div class=gdlr-core-pbf-background-wrap></div>
                     <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                         <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
@@ -549,7 +548,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <footer>
