--- a/views/freight.ejs
+++ b/views/freight.ejs
@@ -257,8 +257,8 @@
                                                                     style="width: 95%; border-radius: 5px; padding: 15px">
                                                                     <option selected disabled>Select Origin
                                                                     </option >
-                                                                    <% for(var i=0; i < kg.length; i++) { %>
-                                                                        <option value=<%= kg[i].origin %>><%= kg[i].origin %>
+                                                                    <% for(var i=0; i < kg.origin.length; i++) { %>
+                                                                        <option value=<%= kg.origin[i].origin %>><%= kg.origin[i].origin %>
                                                                         </option>
                                                                         <% } %>
                                                                 </select>
@@ -268,8 +268,8 @@
                                                                     style="width: 95%; border-radius: 5px; padding: 15px">
                                                                     <option selected disabled>Select Destination
                                                                     </option >
-                                                                    <% for(var i=0; i < kg.length; i++) { %>
-                                                                        <option value=<%= kg[i].destination %>><%= kg[i].destination %>
+                                                                    <% for(var i=0; i < kg.destination.length; i++) { %>
+                                                                        <option value=<%= kg.destination[i].destination %>><%= kg.destination[i].destination %>
                                                                         </option>
                                                                         <% } %>
                                                                 </td>
@@ -414,8 +414,8 @@
                                                                     style="width: 95%; border-radius: 5px; padding: 15px">
                                                                     <option selected disabled>Select Origin
                                                                     </option >
-                                                                    <% for(var i=0; i < airf.length; i++) { %>
-                                                                        <option value="<%= airf[i].origin %>"><%= airf[i].origin %>
+                                                                    <% for(var i=0; i < airf.origin.length; i++) { %>
+                                                                        <option value="<%= airf.origin[i].origin %>"><%= airf.origin[i].origin %>
                                                                         </option>
                                                                         <% } %>
                                                                 </select>
@@ -425,8 +425,8 @@
                                                                     style="width: 95%; border-radius: 5px; padding: 15px">
                                                                     <option selected disabled>Select Destination
                                                                     </option >
-                                                                    <% for(var i=0; i < airf.length; i++) { %>
-                                                                        <option value="<%= airf[i].destination %>"><%= airf[i].destination %>
+                                                                    <% for(var i=0; i < airf.destination.length; i++) { %>
+                                                                        <option value="<%= airf.destination[i].destination %>"><%= airf.destination[i].destination %>
                                                                         </option>
                                                                         <% } %>
                                                                 </select>
@@ -579,8 +579,8 @@
                                                                     style="width: 95%; border-radius: 5px; padding: 15px">
                                                                     <option selected disabled>Select Origin
                                                                     </option >
-                                                                    <% for(var i=0; i < seaf.length; i++) { %>
-                                                                        <option value="<%= seaf[i].origin %>"><%= seaf[i].origin %>
+                                                                    <% for(var i=0; i < seaf.origin.length; i++) { %>
+                                                                        <option value="<%= seaf.origin[i].origin %>"><%= seaf.origin[i].origin %>
                                                                         </option>
                                                                         <% } %>
                                                                 </select>
@@ -590,8 +590,8 @@
                                                                     style="width: 95%; border-radius: 5px; padding: 15px">
                                                                     <option selected disabled>Select Origin
                                                                     </option >
-                                                                    <% for(var i=0; i < seaf.length; i++) { %>
-                                                                        <option value="<%= seaf[i].destination %>"><%= seaf[i].destination %>
+                                                                    <% for(var i=0; i < seaf.destination.length; i++) { %>
+                                                                        <option value="<%= seaf.destination[i].destination %>"><%= seaf.destination[i].destination %>
                                                                         </option>
                                                                         <% } %>
                                                                 </select>
