--- a/views/seaf.ejs
+++ b/views/seaf.ejs
@@ -170,9 +170,9 @@
                     <div class="gdlr-core-tab-feature-content-wrap gdlr-core-container  gdlr-core-js"
                         data-tab-id=3 data-sync-height=gdlr-core-tab-feature-1-content>
                         <div class=gdlr-core-tab-feature-content-left>
-                            <h3>SHIPMENT RATES</h3>
+                            <h3 style="color: white;">SHIPMENT RATES</h3>
                             <h3><span class=gdlr-core-space-shortcode
-                                    style="margin-top: 30px ;">Services By Weight :</span></h3>
+                                    style="margin-top: 30px ; color: white;">Services By Weight :</span></h3>
                                    
                                         <table>
                                             <thead>
