--- a/views/updateacc.ejs
+++ b/views/updateacc.ejs
@@ -124,9 +124,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <th>Status</th>
             </tr>
         </thead>
-        <td> <input type="input" class="form-control" id="exampleInputEmail1" placeholder="username" name="username">
+        <td> <input value="<%= data.username %>" type="input" class="form-control" id="exampleInputEmail1" placeholder="username" name="username">
         </td>
-        <td> <input type="email" class="form-control" id="exampleInputEmail1" placeholder="email" name="email">
+        <td> <input value="<%= data.email %>" type="email" class="form-control" id="exampleInputEmail1" placeholder="email" name="email">
         </td>
         <td> <input type="password" class="form-control" id="exampleInputEmail1" placeholder="Password" name="password">
         </td>
