--- a/views/accountmgt.ejs
+++ b/views/accountmgt.ejs
@@ -151,7 +151,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <th>Username</th>
             <th>Email</th>
             <th>Password</th>
-            <th>Status</th>
+            
           </tr>
           </thead>
           <tbody>
@@ -159,8 +159,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <tr>
               <td><%= data[i].username %></td>
               <td><%= data[i].email %></td>
-              <td><%= data[i].password %></td>
-              <td><%= data[i].status %>
+              <td><%= data[i].password %>
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm dropdown-toggle btn-lg active" data-toggle="dropdown" data-offset="-52" aria-expanded="false">
                     <i class="fas fa-bars"></i>
