--- a/views/ourclient.ejs
+++ b/views/ourclient.ejs
@@ -66,10 +66,10 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=ourclient.html
+                                <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=/ourclient
                                         class=sf-with-ul-pre>OUR CLIENTS</a>
                                 </li>
-                                <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=contact.html
+                                <li class="menu-item menu-item-has-children logisco-normal-menu"><a href=/contact
                                         class=sf-with-ul-pre>CONTACT US</a>
                                 </li>
                             </ul>
