fix responsive table

--- a/views/inlandF.ejs
+++ b/views/inlandF.ejs
@@ -171,9 +171,10 @@
                         data-tab-id=3 data-sync-height=gdlr-core-tab-feature-1-content>
                         <div class=gdlr-core-tab-feature-content-left>
                             <h3 >SHIPMENT RATES</h3>
-                            <h3><span class=gdlr-core-space-shortcode
-                                    style="margin-top: 30px ;">Services By Weight :</span></h3>
+                            
                                     <% if(kg){ %>
+                                        <h3><span class=gdlr-core-space-shortcode
+                                            style="margin-top: 30px ;">Services By Weight :</span></h3>
                                         <table>
                                             <thead>
                                                 <tr>
@@ -208,6 +209,8 @@
                                           
                                         </table>
                                       <% } else{ %>  
+                                        <h3><span class=gdlr-core-space-shortcode
+                                            style="margin-top: 30px ;">Services By Charter :</span></h3>
                                         <table>
                                             <thead>
                                                 <tr>
